--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "xdc-commodity-token",
+  "name": "brokeragdapp",
   "version": "1.0.0",
-  "description": "This is a Proof of concept that will articulate how commodities and Assets can persist as tokens on the blockchain and be automated by finance contracts like options, future and Forwards contracts",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "ethers": "^6.3.0",
-    "hardhat": "^2.13.0"
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "hardhat": "^2.17.3"
   }
 }
