--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.17.3"
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "hardhat": "^2.17.3",
+    "or": "^0.2.0"
+  },
+  "dependencies": {
+    "ethers": "^5.0.0"
   }
 }
